2004-02-07  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnomeui/Makefile.am: Remove more deprecated flags.

2004-02-04  Padraig O'Briain <padraig.obriain@sun.com>

	* libgnomeui/gnome-color-picker.c (gnome_color_picker_instance_init):
	Do not set accessible name for GnomeColorPicker. Fixes bug #133200.

	* libgnomeui/gnome-messagebox.c (gnome_message_box_construct): Set
	role to ATK_ROLE_ALERT. Fixes bug #129567.

2004-02-03  Jeffrey Stedfast  <fejj@ximian.com>

	* libgnomeui/gnome-ui-init.c (libgnomeui_class_init): Don't make
	the "show-crash-dialog" property CONSTRUCT_ONLY because it can't
	be set at construct time because we don't get to parse our args
	until afterwards.

2004-02-03  Anders Carlsson  <andersca@gnome.org>

	* configure.in: Release 2.5.4

2004-01-21  Iain <iain@prettypeople.org>

	* libgnomeui/gnome_segv.c (main): Remove the separator from the window

2004-01-21  Alexander Larsson  <alexl@redhat.com>

	* libgnomeui/gnome-icon-lookup.c (gnome_icon_lookup):
	Fix GNOME_ICON_LOOKUP_FLAGS_ALLOW_SVG_AS_THEMSELVES behaviour
	when gdk-pixbuf supports svgs.

2004-01-21  Anders Carlsson  <andersca@gnome.org>

	* libgnomeui/gnome-client.c: (gnome_client_module_info_get):
	* libgnomeui/gnome-ui-init.c: (libgnomeui_module_info_get):
	Fix translation of program arguments. 
	(#106549, patch by Hidetoshi Tajima).

2004-01-21  Alex Duggan  <aldug@astrolinux.com>

	* libgnomeui/gnome-scores.c: (gnome_scores_instance_init)
	Use a close button instead of an OK button in the gnome
	scores dialog.  Fixes #116440

2004-01-20  Fernando Herrera  <fherrera@onirica.com>

	* libgnomeui/gnome_segv.c: (main): Add a button for restarting
	the crahsed application. Hide pid and signal information
	unless GNOME_HACKER env variable is set. Rewrote texts based on
	feedback for bug #127043. Removed bugzilla url.

2004-01-19  Ross Burton  <ross@burtonini.com>

	* libgnomeui/gnome-icon-theme.c (gnome_icon_theme_finalize):
	Check that priv->gtk_theme is not NULL before unrefing it.
