@@ -1,3 +1,11 @@
+2004-02-09  Carlos Garnacho Parro  <carlosg@gnome.org>
+
+	* libgnomeui/gnome-file-entry.c: added "use_filechooser" property
+	that enables the explicit use of GtkFileChooser instead of 
+	GtkFileSelection
+	* libgnomeui/gnome-pixmap-entry.c: ditto
+	* libgnomeui/gnome-icon-entry.c: made it to use GtkFileChooser API
+
 2004-02-07  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* libgnomeui/Makefile.am: Remove more deprecated flags.
